# techno_cpp_task2

./: .builder.sh.swp  .gitignore  .gitmodul  .gitmodules  .travis.yml  README.md  builder.sh  gtest_runer.sh
filemetrics/: CMakeLists.txt
filemetrics/inc/: file_metric.h  str.h  str_map.h  tf_idf_data.h  tf_idf_priority_queue.h
filemetrics/src/: file_metric.c  str.c  str_map.c  tf_idf_priority_queue.c  vec.c
filemetrics/unit_tests/: CMakeLists.txt  file_metric_tests.cpp  str_map_tests.cpp  tf_idf_priority_queue_tests.cpp  vec_tests.cpp
filemetrics_multithreaded/: CMakeLists.txt
filemetrics_multithreaded/inc/: file_metric.h  hash_map.h  vec.h
filemetrics_multithreaded/src/: file_metric.c  hash_map.c  str_map.c
filemetrics_multithreaded/unit_tests/: CMakeLists.txt  file_metric_tests.cpp  hash_map.cpp  str_map_tests.cpp  str_tests.cpp
main_test_dir/: Davis_The-Serpent-and-the-Rainbow_RuLit_Me.txt  Debora-Hou_Bunnicula_3_The-Celery-Stalks-At-Midnight_RuLit_Me.txt  Debora-Hou_Bunnicula_4_Nighty-Nightmare_RuLit_Me.txt  Debora-Hou_Bunnicula_7_Bunnicula-Meets-Edgar-Allan-Crow_RuLit_Me.txt  Durant_The-Life-of-Greece_RuLit_Me.txt  Dzhanet-Kantrell_A-Fat-Cat-Mystery_3_Fat-Cat-Takes-The-Cake_RuLit_Me.txt  Ford_The-Frost-Files_2_Random-Sh-t-Flying-Through-the-Air_RuLit_Me.txt  Harmoni-Hart_Gemma-Bradbury-Mystery_1_Basic-Witch_RuLit_Me.txt  Kersh_The-Best-of-Gerald-Kersh_RuLit_Me.txt  Monika-Shonessi_Cattarina-Mystery_2_The-Black-Cats_RuLit_Me.txt  Runi_Conversations-with-Friends_RuLit_Me.txt  Westerman_The-Buccaneers-of-Boya_RuLit_Me.txt  file1.txt  file2.txt  file4.txt
multi_test/: CMakeLists.txt  main.c
multi_thread_test/: CMakeLists.txt  main.c
non_thread_test/: CMakeLists.txt  main.c
single_test/: CMakeLists.txt  main.c
test/: CMakeLists.txt  main.c
test_dirs/main_test_dir/: Cysin_Of-Ants-and-Dinosaurs_RuLit_Me.txt  Debora-Hou_Bunnicula_1_Bunnicula_RuLit_Me.txt  Debora-Hou_Bunnicula_5_Return-To-Howliday-Inn_RuLit_Me.txt  Durant_Caesar-and-Christ_RuLit_Me.txt  (+18 more)
(+3 files in other folders)
